--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,18 @@
             "problemMatcher": [
                 "$gcc"
             ]
+        },
+        {
+            "label": "python",
+            "type": "shell",
+            "command": "python",
+            "args": [
+                "${file}"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
