--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,6 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-
     //  tree.cpp 
     "version": "2.0.0",
     "tasks": [
@@ -9,10 +8,7 @@
             "label": "clang++",
             "command": "g++ -Wall -std=c++11 -g tree.cpp sqList.cpp ${file} -o f:\\temp\\${fileBasenameNoExtension}.exe",
             "type": "shell",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "group": "build",
             "problemMatcher": [
                 "$gcc"
             ]
@@ -21,6 +17,18 @@
             "label": "python",
             "type": "shell",
             "command": "python",
+            "args": [
+                "${file}"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "cmake",
+            "type": "shell",
+            "command": "cmake",
             "args": [
                 "${file}"
             ],
