--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,26 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "cmake debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "E:/code/vsworkspace/build/Dem1.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
