--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ enable_testing()
 
 # aux_source_directory(./other OTHER_DIR)
 # add_executable(Dem1 ${OTHER_DIR})
-
-add_executable(main test.cpp)
+aux_source_directory(./clang/list LISTDIR)
+add_executable(main clang/listtest.cpp ${LISTDIR})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
